--- a/src/components/style/About.css
+++ b/src/components/style/About.css
@@ -1,3 +1,7 @@
+.backdrop {
+  background-image: radial-gradient(circle, white 50%, black);
+}
+
 .header-image {
   width: 100%;
   margin-top: -2em;
@@ -26,3 +30,10 @@ h4,
   background-image: linear-gradient(white, lightblue);
 }
 
+#intro {
+  padding-top: 25px;
+}
+
+#introducing {
+  background-image: linear-gradient(to right, pink, lightblue);
+}
