--- a/src/components/user/profileComponents/styles/profile.css
+++ b/src/components/user/profileComponents/styles/profile.css
@@ -3,7 +3,13 @@
 }
 
 .input{
-    position: fixed;
+    flex: 1 0 auto;
     bottom: 0px;
-    width: 73%;
+    min-width: 50%;
 }
+
+.mt-7 {
+    position: absolute;
+}
+
+
