--- a/src/components/user/profileComponents/styles/chat.css
+++ b/src/components/user/profileComponents/styles/chat.css
@@ -1,3 +1,18 @@
 .scrollable{
     overflow: hidden;
 }
+
+.chat-input{
+    height: 60px;
+    border-top:2px rgba(61, 61, 61, 0.404) solid;
+    margin-top: 5px;
+    padding: 5px;
+}
+
+.send-button{
+    border-radius: 25px;
+    border: none;
+    padding: 10px;
+    font-size: 22px;
+    color: rgb(58, 58, 58);
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);}
