--- a/src/components/user/profileComponents/styles/header.css
+++ b/src/components/user/profileComponents/styles/header.css
@@ -4,6 +4,21 @@ body {
   top: 0;
   left: 0; }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f6feef; 
+}
+ 
+::-webkit-scrollbar-thumb {
+    background: #e9f0e5; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #dde4d9; 
+}
 .profile-btn-grad {
   border-radius: 25px;
   margin: 5px;
@@ -26,8 +41,11 @@ body {
   grid-gap: 10px;
   grid-template-columns: 50% 50%;
   grid-auto-rows: min-content min-content min-content min-content;
-  grid-template-areas: "avatar user-name" "profile-buttons profile-buttons" "cluster-name cluster-name" "archipelago archipelago";
-  background-color: #f6feef;
+  grid-template-areas: "avatar user-name"
+ "profile-buttons profile-buttons"
+ "cluster-name cluster-name"
+ "archipelago archipelago";
+  background-color: #fdfdfd;
   color: black;
   /* background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%);  border-radius: 10px; */
   -webkit-box-shadow: -2px 0px 17px -2px rgba(0, 0, 0, 0.75);
