--- a/src/components/user/profileComponents/styles/header.css
+++ b/src/components/user/profileComponents/styles/header.css
@@ -3,8 +3,7 @@ body {
   padding: 0;
   top: 0;
   left: 0; }
-
-::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 5px;
 }
 
@@ -45,7 +44,7 @@ body {
  "profile-buttons profile-buttons"
  "cluster-name cluster-name"
  "archipelago archipelago";
-  background-color: #fdfdfd;
+  background-color: #f6feef;
   color: black;
   /* background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%);  border-radius: 10px; */
   -webkit-box-shadow: -2px 0px 17px -2px rgba(0, 0, 0, 0.75);
