--- a/src/components/style/About.css
+++ b/src/components/style/About.css
@@ -1,5 +1,6 @@
 .backdrop {
   background-image: radial-gradient(circle, grey 25%, white 75%);
+  background-size: 50%;
 }
 
 .header-image {
@@ -22,7 +23,7 @@
 h4,
 .s-cards {
   text-align: center;
-  z-index: 10;
+  z-index: 50;
 }
 
 #divisions {
