added credits in footer and fixed chat window

--- a/src/components/user/profileComponents/styles/chat.css
+++ b/src/components/user/profileComponents/styles/chat.css
@@ -24,7 +24,7 @@
 .chat-input{
     min-height: 60px;
     border-top:2px rgba(61, 61, 61, 0.404) solid;
-    margin-top: 5px;
+    bottom:0;
     padding: 5px;
 }
 
