--- a/src/components/style/Footer.css
+++ b/src/components/style/Footer.css
@@ -81,3 +81,9 @@ section .section-title {
 .white{
   color: white !important;
 }
+.madewithlove{
+    color: white ;
+}
+.madewithlove i{
+  color: rgb(255, 19, 70) !important;
+}
