--- a/src/components/user/profileComponents/post-ui/style/post.css
+++ b/src/components/user/profileComponents/post-ui/style/post.css
@@ -3,8 +3,9 @@
     border: 1px solid #e6e6e6;
     background-color: #fff;
     margin-bottom: 60px;
-    margin-left : 20%;
-    margin-right: 20%;
+    width: 20vw;
+    margin-top: 60px;
+    margin-right: 10%;
   }
   .Post-user {
     display: flex;
