--- a/src/components/user/profileComponents/styles/profile.css
+++ b/src/components/user/profileComponents/styles/profile.css
@@ -10,9 +10,63 @@
    position: fixed;
    right: 0;
 }
-
+.posts{
+    background-color: aqua;
+}
 .mt-7 {
     position: absolute;
     top: 100px;
 }
+.post-grid{
+	width: 100%;
+	display: grid !important;
+	grid-gap: 0.2rem;
+	grid-row-gap:50px;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) !important;
+	justify-content: center;
+	align-items: center;
+ 
+}
+.textarea {
+    width: 100%;
+    padding: 2%;
+    border: none;
+    resize: none;
+    border-radius: 10px;
+    outline: none;
+    color: #1DA1F2;
+    font-size: 50px;
+    transition: all 0.5s linear;
+    height: 150px;
+}
+textarea::-webkit-input-placeholder {
+    color: #0bf;
+    }
+    
+    textarea:-moz-placeholder { /* Firefox 18- */
+    color: #0bf;  
+    }
+    
+    textarea::-moz-placeholder {  /* Firefox 19+ */
+    color: #0bf;  
+    }
+    
+    textarea:-ms-input-placeholder {
+    color: #0bf;  
+    }
+.create-post-card{
+    padding: 15px;
+    box-shadow:0px 0px 20px rgba(0, 209, 178, 0.2);
+    border-radius: 15px;
+    margin-top:50px;
+}
+.post-grid-item{
+   
+    height: auto;
+    border-radius: 15px;
+    padding: 15px;
+    padding-top: 8px;
 
+    padding-bottom: 0;
+    box-shadow:0px 0px 20px rgba(0, 209, 178, 0.2);
+}
