--- a/src/components/user/profileComponents/styles/profile.css
+++ b/src/components/user/profileComponents/styles/profile.css
@@ -20,8 +20,8 @@
 .post-grid{
 	width: 100%;
 	display: grid !important;
-	grid-gap: 0.2rem;
-	grid-row-gap:50px;
+	grid-column-gap: 30px;
+	grid-row-gap:30px;
 	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) !important;
 	justify-content: center;
 	align-items: center;
@@ -39,20 +39,32 @@
     transition: all 0.5s linear;
     height: 150px;
 }
+.post-button{
+    border:none;
+    background-color:white;
+    border-radius: 50px;
+    padding: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size:15px;
+    color: black;
+    box-shadow:0px 0px 20px rgba(0, 209, 178, 0.2);
+    
+}
 textarea::-webkit-input-placeholder {
-    color: #0bf;
+    color: rgba(29, 160, 242, 0.5);
     }
     
     textarea:-moz-placeholder { /* Firefox 18- */
-    color: #0bf;  
+    color: rgba(29, 160, 242, 0.5);  
     }
     
     textarea::-moz-placeholder {  /* Firefox 19+ */
-    color: #0bf;  
+    color: rgba(29, 160, 242, 0.5);  
     }
     
     textarea:-ms-input-placeholder {
-    color: #0bf;  
+    color: rgba(29, 160, 242, 0.5);  
     }
 .create-post-card{
     padding: 15px;
