--- a/src/components/user/profileComponents/styles/header.css
+++ b/src/components/user/profileComponents/styles/header.css
@@ -5,16 +5,24 @@ body {
   left: 0; }
 
 ::-webkit-scrollbar {
-  width: 5px; }
+  width: 5px; 
+  opacity: 0;
+}
 
 ::-webkit-scrollbar-track {
   background: #f6feef; }
 
 ::-webkit-scrollbar-thumb {
-  background: #e9f0e5; }
+  background: #e9f0e5; 
+  border-radius: 10px;
+ 
+  transition: 0.5s;
+}
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #dde4d9; }
+  background: #dde4d9; 
+  opacity: 1;
+}
 
 .profile-btn-grad {
   border-radius: 25px;
@@ -38,7 +46,10 @@ body {
   grid-gap: 10px;
   grid-template-columns: 50% 50%;
   grid-auto-rows: min-content min-content min-content min-content;
-  grid-template-areas: "avatar user-name" "profile-buttons profile-buttons" "cluster-name cluster-name" "archipelago archipelago";
+  grid-template-areas: "avatar user-name"
+ "profile-buttons profile-buttons"
+ "cluster-name cluster-name"
+ "archipelago archipelago";
   background-color: #f6feef;
   color: black;
   /* background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%);  border-radius: 10px; */
