--- a/src/components/user/profileComponents/post-ui/style/post.css
+++ b/src/components/user/profileComponents/post-ui/style/post.css
@@ -3,11 +3,13 @@
     border: 1px solid #e6e6e6;
     background-color: #fff;
     width: 20vw;
-    margin-top: 30px;
     padding: 30px;
-    margin-right: 4%;
 }
-
+.qoute{
+  font-size:30px !important;
+  font-weight: bolder !important; 
+}
 .Post-image{
   width: 100%;
+  padding: 10px;
 }
