--- a/src/components/user/profileComponents/styles/profile.css
+++ b/src/components/user/profileComponents/styles/profile.css
@@ -21,15 +21,33 @@
 	width: 100%;
 	display: grid !important;
 	grid-column-gap: 15px;
-	grid-row-gap:10px;
+    grid-row-gap:10px;
+    
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) !important;
- 
+    
     grid-auto-flow: dense;
 
 	justify-content: center;
 	align-items: center;
  
 }
+.post-grid-item{
+    height: auto;
+    border-radius: 15px;
+    padding: 15px;
+    padding-top: 8px;
+    padding-bottom: 0;
+    box-shadow:0px 0px 20px rgba(0, 209, 178, 0.2);
+}
+.create-post-card{
+    padding: 15px;
+    box-shadow:0px 0px 20px rgba(0, 209, 178, 0.2);
+    border-radius: 15px;
+    margin-top:50px;
+    margin-bottom: 30px;
+}
+
+
 .textarea {
     width: 100%;
     padding: 2%;
@@ -69,19 +87,3 @@ textarea::-webkit-input-placeholder {
     textarea:-ms-input-placeholder {
     color: rgba(29, 160, 242, 0.5);  
     }
-.create-post-card{
-    padding: 15px;
-    box-shadow:0px 0px 20px rgba(0, 209, 178, 0.2);
-    border-radius: 15px;
-    margin-top:50px;
-}
-.post-grid-item{
-   
-    height: auto;
-    border-radius: 15px;
-    padding: 15px;
-    padding-top: 8px;
-
-    padding-bottom: 0;
-    box-shadow:0px 0px 20px rgba(0, 209, 178, 0.2);
-}
