--- a/src/components/user/profileComponents/styles/profile.css
+++ b/src/components/user/profileComponents/styles/profile.css
@@ -18,17 +18,13 @@
     top: 100px;
 }
 .post-grid{
-	width: 100%;
-	display: grid !important;
-	grid-column-gap: 15px;
-    grid-row-gap:10px;
-    
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) !important;
-    
-    grid-auto-flow: dense;
-
-	justify-content: center;
-	align-items: center;
+  max-width: 100vw;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 10px;
+  grid-row-gap: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+  grid-auto-rows: auto;
  
 }
 .post-grid-item{
