--- a/src/components/user/profileComponents/styles/profile.css
+++ b/src/components/user/profileComponents/styles/profile.css
@@ -21,10 +21,11 @@
   max-width: 100vw;
   margin: 0 auto;
   display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 10px;
-  grid-row-gap: 30px;
-  grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
-  grid-auto-rows: auto;
+  grid-auto-rows: minmax(180px, auto);
+  grid-auto-flow: dense;
+  padding: 10px;
  
 }
 .post-grid-item{
