--- a/src/components/user/profileComponents/post-ui/style/comment.css
+++ b/src/components/user/profileComponents/post-ui/style/comment.css
@@ -14,6 +14,8 @@
     background: rgb(253, 254, 255);
     margin-bottom: 10px ;
     padding: 10px;
+    border-radius: 2px;
+    box-shadow:0px 0px 20px rgba(0, 209, 178, 0.123);
 }
 
 .comment-author{
@@ -33,8 +35,12 @@
     border-radius: 50%;
 }
 .comment-author-details{
-    color: black !important;
-    font-weight: bolder !important;
+    color: black;
+    font-weight: bolder ;
+}
+.comment-time-stamp{
+    color: darkgrey;
+    font-size: 0.8em;
 }
 .comment-input-container{
     display: flex;
