--- a/src/components/user/profileComponents/styles/profile.css
+++ b/src/components/user/profileComponents/styles/profile.css
@@ -69,6 +69,12 @@
     box-shadow:0px 0px 20px rgba(0, 209, 178, 0.2);
     
 }
+.post-add-button{
+    border:none;
+    background: none;
+    font-size: 20px;
+    font-weight: bolder;
+}
 textarea::-webkit-input-placeholder {
     color: rgba(29, 160, 242, 0.5);
     }
