--- a/src/components/user/profileComponents/post-ui/style/post.css
+++ b/src/components/user/profileComponents/post-ui/style/post.css
@@ -5,7 +5,24 @@
     width: 20vw;
     padding: 30px;
 }
-.qoute{
+.Post-console{
+  float: right;
+	position: relative;
+  cursor: pointer;
+  margin-top:-10px;
+	-webkit-transition: color 0.3s ease;
+	-o-transition: color 0.3s ease;
+	transition: color 0.3s ease;
+}
+.Post-console i{
+  color: #A6A6A6 !important;
+  padding-left: 10px;
+}
+.Post-console i:hover {
+	color: #03658c;
+}
+
+.qoute p{
   padding: 15px;
   font-size:30px !important;
   font-weight: bolder !important; 
