--- a/src/components/user/profileComponents/post-ui/style/post.css
+++ b/src/components/user/profileComponents/post-ui/style/post.css
@@ -12,6 +12,10 @@
   display: table-cell;
   width: 98%;
 }
+.dropdown-menu div{
+  padding: 5px;
+ margin-left:5px!important;
+}
 .Post-console{
 
   float: right;
